@@ -1,3 +1,11 @@
+2017-09-06  Araki Ken  <arakiken@users.sf.net>
+
+	* vte.c: Whether ui_customize_font_file() actually customizes font settings
+	  is checked before redrawing screen.
+
+	* ui_font_config.c: change_custom_cache() and customize_font_name() return 0
+	  if cached value and new value are the same.
+
 2017-09-05  Araki Ken  <arakiken@users.sf.net>
 
 	* ui_im_status_screen.c: max_width of draw_screen() is maximum width
